<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.chicagocityguide.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="1dp"
        android:scaleType="fitXY"
        android:src="@drawable/wall1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Main Menu items start from here -->
        <LinearLayout style="@style/MainMenu_LinearLayout">

            <FrameLayout style="@style/MainMenu_FrameLayout">

                <RelativeLayout
                    style="@style/MainMenu_RelativeLayout">

                    <ImageView
                        style="@style/MainMenu_ImageLayout"
                        android:src="@drawable/dine_n_drink" />

                    <TextView
                        style="@style/MainMenu_TextView"
                        android:text="@string/main_title1" />
                </RelativeLayout>

            </FrameLayout>

            <FrameLayout style="@style/MainMenu_FrameLayout">

                <RelativeLayout
                    style="@style/MainMenu_RelativeLayout">

                    <ImageView
                        style="@style/MainMenu_ImageLayout"
                        android:src="@drawable/famous_attractions" />

                    <TextView
                        style="@style/MainMenu_TextView"
                        android:text="@string/main_title2" />
                </RelativeLayout>

            </FrameLayout>
        </LinearLayout>

        <LinearLayout style="@style/MainMenu_LinearLayout">

            <FrameLayout style="@style/MainMenu_FrameLayout">

                <RelativeLayout
                    style="@style/MainMenu_RelativeLayout">

                    <ImageView
                        style="@style/MainMenu_ImageLayout"
                        android:src="@drawable/neighborhoods" />

                    <TextView
                        style="@style/MainMenu_TextView"
                        android:text="@string/main_title3" />
                </RelativeLayout>

            </FrameLayout>

            <FrameLayout style="@style/MainMenu_FrameLayout">

                <RelativeLayout
                    style="@style/MainMenu_RelativeLayout">

                    <ImageView
                        style="@style/MainMenu_ImageLayout"
                        android:src="@drawable/museums" />

                    <TextView
                        style="@style/MainMenu_TextView"
                        android:text="@string/main_title4" />
                </RelativeLayout>

            </FrameLayout>
        </LinearLayout>

        <LinearLayout style="@style/MainMenu_LinearLayout">

            <FrameLayout style="@style/MainMenu_FrameLayout">

                <RelativeLayout
                    style="@style/MainMenu_RelativeLayout">

                    <ImageView
                        style="@style/MainMenu_ImageLayout"
                        android:src="@drawable/popular_hotels" />

                    <TextView
                        style="@style/MainMenu_TextView"
                        android:text="@string/main_title5" />
                </RelativeLayout>

            </FrameLayout>

            <FrameLayout style="@style/MainMenu_FrameLayout">

                <RelativeLayout
                    style="@style/MainMenu_RelativeLayout">

                    <ImageView
                        style="@style/MainMenu_ImageLayout"
                        android:src="@drawable/airbnb_rentals" />

                    <TextView
                        style="@style/MainMenu_TextView"
                        android:text="@string/main_title6" />
                </RelativeLayout>

            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:text="@string/main_title7"
        android:background="#616161"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"/>
</LinearLayout>
